# invenio-swh

./: CHANGES.rst  setup.cfg
.github/workflows/: pypi-release.yml  tests.yml
invenio_swh/: __init__.py  api.py
invenio_swh/records/: systemfields.py
tests/: conftest.py
