# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2024 CERN
# Copyright (C) 2020 Cottage Labs LLP.
#
# invenio-swh is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.
[metadata]
name = invenio-swh
version = attr: invenio_swh.__version__
description = Invenio module to integrate Software Heritage.
long_description = file: README.rst, CHANGES.rst
keywords = invenio swh data model
license = MIT
author = "CERN/Cottage Labs LLP."
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-swh
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 1 - Planning

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8
include_package_data = True
install_requires =
    sword2>=0.3.0
    xmltodict
    invenio-rdm-records>=17.0.1
    invenio-access>=2.0.0
    invenio-db>=1.1.5
    invenio-records-resources>=5.0.0
    marshmallow-utils>=0.8.1

[options.extras_require]
tests =
    invenio-app>=2.0.0,<3.0.0
    invenio-db[postgresql]>=2.0.0,<3.0.0
    pytest-invenio>=3.0.0,<4.0.0
    pytest-black-ng>=0.4.0
    sphinx>=4.5.0
    xmldiff
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
invenio_base.apps =
    invenio_swh = invenio_swh:InvenioSWH
invenio_base.api_apps =
    invenio_swh = invenio_swh:InvenioSWH
invenio_db.models =
    invenio_swh = invenio_swh.models
invenio_db.alembic =
    invenio_swh = invenio_swh:alembic
invenio_celery.tasks =
    invenio_swh = invenio_swh.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_swh/translations/

[extract_messages]
copyright_holder = Cottage Labs LLP
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_swh/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_swh/translations/messages.pot
output-dir = invenio_swh/translations/

[update_catalog]
input-file = invenio_swh/translations/messages.pot
output-dir = invenio_swh/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --ignore=docs --cov=invenio_swh --cov-report=term-missing
testpaths = tests invenio_swh
